# mlx-dev-server

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: uv-test.yml
src/mlx_dev_server/: app.py  handlers.py  models.py
src/mlx_dev_server/api/: __init__.py  base.py  chat_completions.py  completions.py
src/mlx_dev_server/cli/: server.py
tests/: test_handlers.py
